[WNC-6] refractor mailCLient & add swagger
