# docs/swagger.yaml
@@ -110,6 +110,34 @@ definitions:
     - password
     - phoneNumber
     type: object
+  model.ResetPasswordRequest:
+    properties:
+      email:
+        maxLength: 255
+        minLength: 10
+        type: string
+      otp:
+        maxLength: 6
+        minLength: 6
+        type: string
+      password:
+        maxLength: 255
+        minLength: 8
+        type: string
+    required:
+    - email
+    - otp
+    - password
+    type: object
+  model.SendOTPRequest:
+    properties:
+      email:
+        maxLength: 255
+        minLength: 10
+        type: string
+    required:
+    - email
+    type: object
 info:
   contact: {}
 paths:
@@ -197,6 +225,62 @@ paths:
           schema:
             $ref: '#/definitions/httpcommon.HttpResponse-any'
       summary: Register
+      tags:
+      - Auths
+  /auth/reset-password:
+    post:
+      consumes:
+      - application/json
+      description: Resets user password base on their email
+      parameters:
+      - description: Reset Password payload
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.ResetPasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httpcommon.HttpResponse-any'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httpcommon.HttpResponse-any'
+      summary: Reset Password
+      tags:
+      - Auths
+  /auth/reset-password/otp:
+    post:
+      consumes:
+      - application/json
+      description: Send OTP to user email
+      parameters:
+      - description: Send OTP payload
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.SendOTPRequest'
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httpcommon.HttpResponse-any'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httpcommon.HttpResponse-any'
+      summary: Send OTP to Mail
       tags:
       - Auths
   /core/estimate-transfer-fee:
